--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,5 @@ jobs:
           ruby-version: "${{ matrix.ruby }}"
           bundler-cache: true
       - run: bundle install
-      - run: bundle exec rspec
+      - run: bundle exec rake debug
+      - run: bundle exec rake spec
